fix: restore lineage person center search visibility

--- a/frontend/genealogy-web/src/features/tree/lineage-workbench-issue376.css
+++ b/frontend/genealogy-web/src/features/tree/lineage-workbench-issue376.css
@@ -226,7 +226,11 @@
 }
 
 .lineage-query-grid--person {
-  grid-template-columns: minmax(170px, .75fr) minmax(190px, .9fr) minmax(300px, 1.4fr) minmax(150px, .75fr) minmax(150px, .75fr) minmax(220px, 1fr);
+  grid-template-columns: minmax(180px, .85fr) minmax(200px, 1fr) minmax(320px, 1.45fr);
+}
+
+.lineage-query-grid--person > .ant-form-item:nth-child(3) {
+  grid-column: span 1;
 }
 
 .lineage-query-grid--branch {
@@ -236,7 +240,7 @@
 .lineage-query-grid--person .lineage-person-search {
   display: flex;
   width: 100%;
-  min-width: 280px;
+  min-width: 0;
 }
 
 .lineage-query-grid--person .lineage-person-search .ant-input-affix-wrapper,
@@ -281,6 +285,10 @@
   .lineage-query-grid--branch {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .lineage-query-grid--person > .ant-form-item:nth-child(3) {
+    grid-column: 1 / -1;
+  }
 }
 
 @media (max-width: 767px) {
@@ -294,6 +302,10 @@
   .lineage-query-grid--person,
   .lineage-query-grid--branch {
     grid-template-columns: 1fr;
+  }
+
+  .lineage-query-grid--person > .ant-form-item:nth-child(3) {
+    grid-column: auto;
   }
 
   .lineage-query-grid--person .lineage-person-search {
